--- a/index.html
+++ b/index.html
@@ -8,7 +8,64 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <main>
+        <h1 class="p-4">Calcola il prezzo del tuo biglietto</h1>
+        <div class="form-wrapper p-4">
+            <form>
+                <div class="mb-3">
+                    <label for="name-surname" class="form-label">Nome e Cognome</label>
+                    <input type="text" class="form-control" id="name-surname" value="" name="name-surname">
+                </div>
+
+                <div class="mb-3">
+                    <label for="nKm" class="form-label">Km da percorrere</label>
+                    <input type="text" class="form-control" id="nKm" value="" name="nKm">
+                </div>
+
+                <div class="mb-3">
+                    <label for="age" class="form-label">Fascia d'età</label>
+                    <select id="age" name="age" class="form-select">
+                        <option value="">Scegli...</option>
+                        <option value="under">Minorenne</option>
+                        <option value="standard">Maggiorenne</option>
+                        <option value="over">Over65</option>
+                    </select>
+                </div>
+
+                <div class="mb-3">
+                    <button class="btn btn-primary" type="submit">Genera</button>
+                    <button class="btn btn-warning" type="submit">Annulla</button>
+                </div>
+
+            </form>
+        </div>
+        <div class="ticket p-4 d-none">
+            <h2>Il tuo biglietto</h2>
+            <div class="ticket-wrapper">
+                <h3>Dettaglio Passeggeri</h3>
+                <div>
+                    <h5>Nome passeggero</h5>
+                    <div id="passenger-name"></div>
+                </div>
+                <div>
+                    <h5>Offerta</h5>
+                    <div id="offer"></div>
+                </div>
+                <div>
+                    <h5>Carrozza</h5>
+                    <div id="ncarriage"></div>
+                </div>
+                <div>
+                    <h5>Codice CP</h5>
+                    <div id="cp-code"></div>
+                </div>
+                <div>
+                    <h5>Costo Biglietto</h5>
+                    <div id="price"></div>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <script src="js/script.js"></script>
 </body>
