--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </div>
 
                 <div class="mb-3">
-                    <button class="btn btn-primary" type="submit">Genera</button>
-                    <button class="btn btn-warning" type="submit">Annulla</button>
+                    <button id="submit" class="btn" type="submit">Genera</button>
+                    <button id="reset" class="btn" type="submit">Annulla</button>
                 </div>
 
             </form>
