added const for passenger name and nKm

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                     </select>
                 </div>
 
-                <div class="mb-3">
-                    <button id="submit" class="btn" type="submit">Genera</button>
-                    <button id="reset" class="btn" type="submit">Annulla</button>
-                </div>
-
             </form>
+            <div class="mb-3">
+                <button id="submit" class="btn">Genera</button>
+                <button id="reset" class="btn">Annulla</button>
+            </div>
+            
         </div>
         <div class="ticket p-4 d-none">
             <h2>Il tuo biglietto</h2>
