added event on reset button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <h1 class="p-4">Calcola il prezzo del tuo biglietto</h1>
         <div class="form-wrapper p-4">
-            <form>
+            <form id="ticket-form">
                 <div class="mb-3">
                     <label for="name-surname" class="form-label">Nome e Cognome</label>
                     <input type="text" class="form-control" id="name-surname" value="" name="name-surname">
@@ -37,7 +37,7 @@
                 <button id="submit" class="btn">Genera</button>
                 <button id="reset" class="btn">Annulla</button>
             </div>
-            
+
         </div>
         <div class="ticket p-4 d-none">
             <h2>Il tuo biglietto</h2>
