--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <main>
-        <h1 class="p-4">Calcola il prezzo del tuo biglietto</h1>
-        <div class="form-wrapper p-4">
-            <form id="ticket-form">
+        <h1 class="p-4 text-uppercase text-white text-center">Calcola il prezzo del tuo biglietto</h1>
+
+        <!-- form  -->
+        <div class="form-wrapper container-sm py-4 mb-5 text-center">
+            <form id="ticket-form" class="d-flex justify-content-evenly fw-bold">
                 <div class="mb-3">
                     <label for="name-surname" class="form-label">Nome e Cognome</label>
                     <input type="text" class="form-control" id="name-surname" value="" name="name-surname">
@@ -31,37 +33,41 @@
                         <option value="over">Over65</option>
                     </select>
                 </div>
-
             </form>
             <div class="mb-3">
-                <button id="submit" class="btn">Genera</button>
-                <button id="reset" class="btn">Annulla</button>
+                <button id="submit" class="btn btn-light">Genera</button>
+                <button id="reset" class="btn btn-light">Annulla</button>
             </div>
-
         </div>
-        <div class="ticket p-4 d-none">
-            <h2>Il tuo biglietto</h2>
-            <div class="ticket-wrapper">
-                <h3>Dettaglio Passeggeri</h3>
-                <div>
-                    <h5>Nome passeggero</h5>
-                    <div id="passenger-name"></div>
-                </div>
-                <div>
-                    <h5>Offerta</h5>
-                    <div id="offer"></div>
-                </div>
-                <div>
-                    <h5>Carrozza</h5>
-                    <div id="ncarriage"></div>
-                </div>
-                <div>
-                    <h5>Codice CP</h5>
-                    <div id="cp-code"></div>
-                </div>
-                <div>
-                    <h5>Costo Biglietto</h5>
-                    <div id="price"></div>
+
+        <!-- biglietto  -->
+        <div class="ticket container-sm d-none">
+            <h2 class="text-uppercase text-white mb-4 text-center">Il tuo biglietto</h2>
+            <div class="ticket-wrapper p-4">
+                <h3 class="text-uppercase">Dettaglio Passeggeri</h3>
+                <div class="ticket-content row">
+                    <div class="ticket-name col-4">
+                        <h5 class="text-uppercase">Nome passeggero</h5>
+                        <div id="passenger-name" class="fw-bold h4"></div>
+                    </div>
+                    <div class="col-8 ticket-details d-flex justify-content-between">
+                        <div>
+                            <h5>Offerta</h5>
+                            <div id="offer"></div>
+                        </div>
+                        <div>
+                            <h5>Carrozza</h5>
+                            <div id="ncarriage"></div>
+                        </div>
+                        <div>
+                            <h5>Codice CP</h5>
+                            <div id="cp-code"></div>
+                        </div>
+                        <div>
+                            <h5>Costo Biglietto</h5>
+                            <div id="price"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
