removed alert + fixed reset btn

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <button id="submit" class="btn btn-light" type="button">Genera</button>
                     <button id="reset" class="btn btn-light" type="button">Annulla</button>
                 </div>
+                <div id="error-msg" class="d-none"></div>
             </form>
             
         </div>
